--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2><a href="#" class="logo">alors</a></h2>
 <ul>
     <li><a href="#" class="active">home</a></li>
-    <li><a href="#">product</a></li>
+    <li><a href="#product">product</a></li>
     <li><a href="#">about</a></li>
     <li><a href="#">shop</a></li>
     <li><a href="#">contact</a></li>
